# WTF

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.base  Makefile  README.md  SPIDER_IMPROVEMENTS.md  SUPABASE_SETUP.md  TODO.md  docker-compose.yml  models.py  pyproject.toml  sample_events.csv  schema.sql
docs/: CONSUMER_GUIDE.md  INTEGRATION_GUIDE.md  README.md  TESTING.md  TESTING_GUIDE.md  architecture.md  message_queue_usage.md  messaging.md
events_data/: events_20251211_123803.json  free_food_20251211_123803.json
infra/: README.md
scripts/: README.md  check_deps.sh  create_migration.py  example_mq_usage.py  integration_demo.py  reset_redis.sh  run_demo.sh  setup_spider.py  supabase_migrate.sh  test_batch_email.py  test_email.py  test_spider.py
services/: config.py  database.py  mq.py  subscription_api.py  supabase_client.py
services/api/: Dockerfile  __main__.py
services/decision_gateway/: Dockerfile  __main__.py
services/llm_agent/: Dockerfile  __main__.py
services/mq_consumer/: Dockerfile  __main__.py
services/notification/: Dockerfile  __main__.py  async_email.py  email_templates.py  notifier.py
services/scrape/: __main__.py
services/spider/: __init__.py  __main__.py
services/subscription_api/: Dockerfile
supabase/: README.md
supabase/migrations/: 20250101000000_initial_schema.sql  20250101000001_auth_integration.sql  20250101000002_rls_policies.sql  (+2 more)
tests/: conftest.py  test_config.py  test_consumer_script.py  test_integration.py  test_mq.py  test_mq_consumer.py
wtf_app/: README.md  pubspec.yaml
(+35 files in other folders)
