[tool.poetry]
name = "wtf"
version = "0.1.0"
description = ""
authors = ["roshanlam <lamichhaner40@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
  { include = "services", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.120.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
redis = "^7.0.1"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
numpy = "^2.3.5"
pandas = "^2.3.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"
dotenv = "^0.9.9"
twilio = "^9.8.8"
jinja2 = "^3.1.6"
supabase = "^2.0.0"
pydantic = "^2.0.0"
google-genai = "^1.56.0"
aiosmtplib = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.3"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
types-requests = "^2.32.4.20250913"

[tool.poetry.scripts]
api = "services.api.__main__:main"
llm-agent = "services.llm_agent.__main__:main"
decision-gateway = "services.decision_gateway.__main__:main"
mq-consumer = "services.mq_consumer.__main__:main"
notification = "services.notification.__main__:main"
scrape = "services.scrape.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
